--- a/site/package.json
+++ b/site/package.json
@@ -1,29 +1,38 @@
 {
-  "name": "react-hooks",
-  "version": "1.0.0",
-  "author": "Nik Graf",
+  "name": "react-hooks-cra",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "babel-plugin-styled-components": "^1.8.0",
-    "gatsby": "^2.0.19",
-    "gatsby-plugin-google-analytics": "^2.0.7",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-styled-components": "^3.0.0",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-helmet": "^5.2.0",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
     "react-highlight-words": "^0.16.0",
     "styled-components": "^4.0.2",
     "tmp-cache": "^1.0.0"
   },
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build --prefix-paths",
-    "build:local": "gatsby build",
-    "develop": "gatsby develop",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
-  },
   "devDependencies": {
     "gh-pages": "^2.0.1",
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.2",
+    "react-scripts": "2.1.5",
+    "react-snap": "^1.23.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "deploy": "yarn build && gh-pages -d build",
+    "postbuild": "react-snap"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "reactSnap": {
+    "inlineCss": true
   }
 }
